--- a/style.css
+++ b/style.css
@@ -105,6 +105,18 @@ th {
   margin-right: 0.5em; /* Add some spacing between the marker and the list item text */
 }
 
+.button-container {
+  display: flex;
+
+}
+
+.button-container  a{
+  margin: 1rem;
+
+}
+.scroll-button:hover {
+  background-color: #1f2f42;
+}
 /* Container Styles */
 .section-container {
   margin: 0 auto;
@@ -270,6 +282,33 @@ img.confirm-image{
   color: #333;
   margin-top: 10px;
 }
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.info-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: 20px;
+}
+
+.info {
+  padding: 20px;
+}
+
+.details {
+  padding: 20px;
+  margin-top: 1rem;
+}
+
+.details li {
+  margin-bottom: 12px; /* Adjust the value to increase or decrease the space between items */
+}
+
+
 
 /* Add more CSS styles as needed to customize the appearance of the grid items */
 
